// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AttributeFilterHandler > getInitialElementsPageError() should return error 1`] = `[Error: Elements error]`;

exports[`AttributeFilterHandler > getInitialElementsPageStatus() should return proper status for failed load > after the load 1`] = `"loading"`;

exports[`AttributeFilterHandler > getInitialElementsPageStatus() should return proper status for failed load > before the load 1`] = `"pending"`;

exports[`AttributeFilterHandler > getInitialElementsPageStatus() should return proper status for failed load > during the load 1`] = `"loading"`;

exports[`AttributeFilterHandler > getInitialElementsPageStatus() should return proper status for successful load > after the load 1`] = `"success"`;

exports[`AttributeFilterHandler > getInitialElementsPageStatus() should return proper status for successful load > before the load 1`] = `"pending"`;

exports[`AttributeFilterHandler > getInitialElementsPageStatus() should return proper status for successful load > during the load 1`] = `"loading"`;

exports[`AttributeFilterHandler > loadInitialElementsPage() should be filtered by limit() 1`] = `
[
  {
    "title": "CompuSci",
    "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=165678",
  },
  {
    "title": "Educationly",
    "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=165847",
  },
  {
    "title": "Explorer",
    "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=342345",
  },
]
`;

exports[`AttributeFilterHandler > loadInitialElementsPage() should be filtered by order() 1`] = `
[
  {
    "title": "WonderKid",
    "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=166497",
  },
  {
    "title": "TouchAll",
    "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=460491",
  },
  {
    "title": "PhoenixSoft",
    "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=166339",
  },
  {
    "title": "Grammar Plus",
    "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=168737",
  },
  {
    "title": "Explorer",
    "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=342345",
  },
  {
    "title": "Educationly",
    "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=165847",
  },
  {
    "title": "CompuSci",
    "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=165678",
  },
]
`;

exports[`AttributeFilterHandler > loadInitialElementsPage() should be filtered by search() 1`] = `
[
  {
    "title": "WonderKid",
    "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=166497",
  },
]
`;

exports[`AttributeFilterHandler > loadInitialElementsPage() should be filtered by setLimitingAttributeFilters() 1`] = `
[
  {
    "title": "Educationly",
    "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=165847",
  },
  {
    "title": "Grammar Plus",
    "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=168737",
  },
  {
    "title": "TouchAll",
    "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=460491",
  },
]
`;

exports[`AttributeFilterHandler > loadInitialElementsPage() should be filtered by setLimitingDateFilters() 1`] = `
[
  {
    "title": "Grammar Plus",
    "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=168737",
  },
]
`;

exports[`AttributeFilterHandler > loadInitialElementsPage() should be filtered by setLimitingMeasures() 1`] = `
[
  {
    "title": "Explorer",
    "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=342345",
  },
  {
    "title": "TouchAll",
    "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=460491",
  },
]
`;

exports[`AttributeFilterHandler > loadInitialElementsPage() should throw error if it's called before the initialization 1`] = `"Cannot call loadInitialElementsPage() before successful initialization."`;

exports[`AttributeFilterHandler > loadInitialElementsPage() should trigger onLoadInitialElementsPageStart() callback > with parameters 1`] = `
[
  {
    "correlation": "start",
  },
]
`;

exports[`AttributeFilterHandler > loadInitialElementsPage() that failed should trigger onLoadInitialElementsPageError() callback > with parameters 1`] = `
[
  {
    "correlation": "error",
    "error": [Error: Elements error],
  },
]
`;

exports[`AttributeFilterHandler > loadInitialElementsPage() that was canceled by another loadInitialElementsPage() call should trigger onLoadInitialElementsPageCancel() callback > with parameters 1`] = `
[
  {
    "correlation": "cancel",
  },
]
`;

exports[`AttributeFilterHandler > loadInitialElementsPage() that was canceled by cancelInitialElementsPageLoad() call should trigger onLoadInitialElementsPageCancel() callback > with parameters 1`] = `
[
  {
    "correlation": "cancel",
  },
]
`;

exports[`AttributeFilterHandler > loadInitialElementsPage() that was successful should trigger onLoadInitialElementsPageSuccess() callback > with parameters 1`] = `
[
  {
    "correlation": "success",
    "elements": [
      {
        "title": "CompuSci",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=165678",
      },
      {
        "title": "Educationly",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=165847",
      },
      {
        "title": "Explorer",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=342345",
      },
      {
        "title": "Grammar Plus",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=168737",
      },
      {
        "title": "PhoenixSoft",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=166339",
      },
      {
        "title": "TouchAll",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=460491",
      },
      {
        "title": "WonderKid",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=166497",
      },
    ],
    "options": {
      "excludePrimaryLabel": false,
      "limit": 500,
      "limitingAttributeFilters": [],
      "limitingDateFilters": [],
      "limitingMeasures": [],
      "offset": 0,
      "order": undefined,
      "search": "",
    },
    "totalCount": 7,
  },
]
`;
